--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
